[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fotohub"
version = "1.3.0"
description = "Official Python SDK for the FOTOhub AI Platform — image, video, music, 3D generation, chat/LLM, and more"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "FOTOhub", email = "dev@fotohub.app" },
]
keywords = ["ai", "image-generation", "video-generation", "music-generation", "llm", "fotohub"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.24",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-httpx>=0.21",
    "ruff>=0.1",
    "mypy>=1.5",
]

[project.urls]
Homepage = "https://fotohub.app"
Documentation = "https://docs.fotohub.app/sdk/python"
Repository = "https://github.com/fotohubapp/sdk-python"
Issues = "https://github.com/fotohubapp/sdk-python/issues"

[tool.hatch.build.targets.wheel]
packages = ["fotohub"]

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.9"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
